--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+    
+  <servlet>
+  	<servlet-name>TestServlet</servlet-name>
+  	<servlet-class>com.member.controller.TestServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>TestServlet</servlet-name>
+  	<url-pattern>/member/test</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
