--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -16,7 +16,7 @@
   </servlet>
   <servlet-mapping>
   	<servlet-name>TestServlet</servlet-name>
-  	<url-pattern>/member/test</url-pattern>
+  	<url-pattern>/member/TestServlet</url-pattern>
   </servlet-mapping>
   
 </web-app>
