--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
-<!--   活動   -->
+<!--   活動開始   -->
 
   <servlet>
   	<servlet-name>ActivityImageServlet</servlet-name>
@@ -21,6 +21,6 @@
   	<url-pattern>/activity/ActivityImage</url-pattern>
   </servlet-mapping>
   
- <!--   活動   -->
+ <!--   活動結束   -->
   
 </web-app>
