新增 活動的Controller Mapping

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,6 +15,15 @@
 
 	<!-- 活動開始 -->
 	<servlet>
+		<servlet-name>ActivityServlet</servlet-name>
+		<servlet-class>com.activity.controller.ActivityServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ActivityServlet</servlet-name>
+		<url-pattern>/activity/Activity</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
 		<servlet-name>ActivityClassServlet</servlet-name>
 		<servlet-class>com.activityClass.controller.ActivityClassServlet</servlet-class>
 	</servlet>
