--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -42,5 +42,25 @@
 	</servlet-mapping>
 
 	<!-- 活動結束 -->
+	
+	<!-- 訂房開始 -->
+	<servlet>
+		<servlet-name>RoomTypeServlet</servlet-name>
+		<servlet-class>com.roomType.controller.RoomTypeServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>RoomTypeServlet</servlet-name>
+		<url-pattern>/room/RoomType</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>RoomImgServlet</servlet-name>
+		<servlet-class>com.roomImg.controller.RoomImgServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>RoomImgServlet</servlet-name>
+		<url-pattern>/room/RoomImg</url-pattern>
+	</servlet-mapping>
+	<!-- 訂房結束 -->
 
 </web-app>
